--- a/arch/arm/configs/semc_ayame_defconfig
+++ b/arch/arm/configs/semc_ayame_defconfig
@@ -109,7 +109,7 @@ CONFIG_HAVE_KRETPROBES=y
 # GCOV-based kernel profiling
 #
 # CONFIG_GCOV_KERNEL is not set
-CONFIG_SLOW_WORK=y
+# CONFIG_SLOW_WORK is not set
 CONFIG_HAVE_GENERIC_DMA_COHERENT=y
 CONFIG_SLABINFO=y
 CONFIG_RT_MUTEXES=y
@@ -1333,6 +1333,7 @@ CONFIG_UNIX98_PTYS=y
 # CONFIG_LEGACY_PTYS is not set
 # CONFIG_IPMI_HANDLER is not set
 # CONFIG_HW_RANDOM is not set
+CONFIG_FRANDOM=y 
 # CONFIG_R3964 is not set
 # CONFIG_RAW_DRIVER is not set
 # CONFIG_TCG_TPM is not set
@@ -2243,6 +2244,7 @@ CONFIG_MSM_RPCSERVERS=y
 CONFIG_XVMALLOC=y
 CONFIG_ZRAM=y
 CONFIG_ZRAM_DEBUG=y
+CONFIG_ZCACHE=y
 
 #
 # File systems
